ansible/clusters/my-cluster/lamp/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: lamp-stack:apps/Deployment:lamp/apache-php
      deployment.kubernetes.io/revision: "2"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"lamp-stack:apps/Deployment:lamp/apache-php","deployment.kubernetes.io/revision":"1"},"generation":1,"name":"apache-php","namespace":"lamp"},"spec":{"availableReplicas":1,"conditions":[{"lastTransitionTime":"2026-02-26T16:06:10Z","lastUpdateTime":"2026-02-26T16:06:10Z","message":"Deployment has minimum availability.","reason":"MinimumReplicasAvailable","type":"Available"},{"lastTransit [...]
    name: apache-php
    namespace: lamp
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: apache-php
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          app: apache-php
      spec:
        containers:
        - image: httpd:alpine
          imagePullPolicy: IfNotPresent
          name: apache
          ports:
          - containerPort: 80
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - args:
          - |
            php-fpm
          command:
          - /bin/sh
          - -c
          image: php:fpm-alpine
          imagePullPolicy: IfNotPresent
          name: phpfpm
          ports:
          - containerPort: 9000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - args:
          - --scrape_uri
          image: bitnami/apache-exporter:latest
          imagePullPolicy: Always
          name: apache-exporter
          ports:
          - containerPort: 9117
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - env:
          - name: PHP_FPM_SCRAPE_URI
          image: hipages/php-fpm_exporter:2
          imagePullPolicy: IfNotPresent
          name: phpfpm-exporter
          ports:
          - containerPort: 9253
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    - lastTransitionTime: "2026-02-26T19:00:38Z"
      lastUpdateTime: "2026-02-26T19:00:38Z"
      message: Deployment does not have minimum availability.
      reason: MinimumReplicasUnavailable
      type: Available
    - lastTransitionTime: "2026-02-26T18:23:52Z"
      lastUpdateTime: "2026-02-26T19:00:43Z"
      message: ReplicaSet "apache-php-85fcdb75df" is progressing.
      reason: ReplicaSetUpdated
      type: Progressing
    replicas: 1
    unavailableReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"postgresql","namespace":"lamp"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"postgresql"}},"template":{"metadata":{"labels":{"app":"postgresql"}},"spec":{"containers":[{"env":[{"name":"POSTGRES_PASSWORD","value":"password"},{"name":"POSTGRES_DB","value":"bank"}],"image":"postgres:15","name":"postgresql","ports":[{"containerPort":5432}]}]}}}}
    name: postgresql
    namespace: lamp
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: postgresql
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: postgresql
      spec:
        containers:
        - env:
          - name: POSTGRES_PASSWORD
            value: password
          - name: POSTGRES_DB
            value: bank
          image: postgres:15
          imagePullPolicy: IfNotPresent
          name: postgresql
          ports:
          - containerPort: 5432
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    - lastTransitionTime: "2026-02-26T18:23:54Z"
      lastUpdateTime: "2026-02-26T18:23:54Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      type: Available
    - lastTransitionTime: "2026-02-26T18:23:52Z"
      lastUpdateTime: "2026-02-26T18:23:54Z"
      message: ReplicaSet "postgresql-698c9ff655" has successfully progressed.
      reason: NewReplicaSetAvailable
      type: Progressing
    replicas: 1
kind: List
metadata:
