ansible/clusters/my-cluster/lamp/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
      nginx.ingress.kubernetes.io/backend-protocol: HTTP
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    generation: 1
    name: bank-final
    namespace: lamp
  spec:
    ingressClassName: nginx
    rules:
    - host: bank.34.89.208.249.nip.io
      http:
        paths:
        - backend:
            service:
              name: apache-php
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - bank.34.89.208.249.nip.io
      secretName: bank-tls-secret
    loadBalancer:
      ingress:
      - ip: 10.156.15.202
kind: List
metadata:
